--- a/index.qmd
+++ b/index.qmd
@@ -15,6 +15,8 @@ about:
       href: mailto:mickey.rafa3@gmail.com
 ---
 
-Hello! My name is Mickey, and welcome to my personal portfolio website. I'll be adding a selection of data science and viz projects here that showcase the breadth of work that I've completed.
+**Under construction** :)
+
+My name is Mickey, and welcome to my personal portfolio website! I'll be adding a selection of data science and viz projects here that showcase the breadth of work that I've completed.
 
 Let's connect! Feel free to reach out to me on LinkedIn or send me an email.
