added education to landing page

--- a/index.qmd
+++ b/index.qmd
@@ -20,3 +20,13 @@ My name is Mickey, and welcome to my personal portfolio website! I'll be adding 
 Let's connect! Feel free to reach out to me on LinkedIn or send me an email.
 
 🚧 **This site is under construction** 🚧
+
+**Education**
+
+------------------------------------------------------------------------
+
+**MS in Business Analytics** \| University of Denver
+
+**MA in International Studies** \| University of Denver
+
+**BA in Political Science** \| West Virginia University
