--- a/workshops/2018-05-15-korbel-skills-tidyverse/index.qmd
+++ b/workshops/2018-05-15-korbel-skills-tidyverse/index.qmd
@@ -6,7 +6,7 @@ author:
     url: https://mrafa3.github.io/
     #orcid: 0000-0002-5300-3075
 date: 05-15-2018
-categories: [Quarto, R, tidyverse, ggplot] # self-defined categories
+categories: [R, tidyverse, ggplot, data-viz, international-development] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: economist_plot.png
