--- a/posts/2024-07-15-wikipedia-international-mens-soccer/index.qmd
+++ b/posts/2024-07-15-wikipedia-international-mens-soccer/index.qmd
@@ -6,7 +6,7 @@ author:
     url: https://mrafa3.github.io/
     #orcid: 0000-0002-5300-3075
 date: 07-15-2024
-categories: [Quarto, R, web-scraping, gt] # self-defined categories
+categories: [R, web-scraping, gt, sports] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: tbl_top_scorers.png
