adding thumbnail and making part two live

--- a/posts/2019-06-18-clustering-african-health-outcomes/index.qmd
+++ b/posts/2019-06-18-clustering-african-health-outcomes/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Cluster Analysis of African Health Outcomes"
+title: "PART ONE: Cluster Analysis of African Health Outcomes"
 description: "Exploring how African countries cluster based on their health outcomes"
 author:
   - name: Mickey Rafa
