--- a/posts/2019-06-25-mapping-african-health-clusters/index.qmd
+++ b/posts/2019-06-25-mapping-african-health-clusters/index.qmd
@@ -9,20 +9,21 @@ date: 06-18-2019
 categories: [R, data-viz, tidyverse, international-development, cluster-analysis, mapping] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
-image: cluster_plot.png
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+image: cluster_map.png
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 ---
 
 ```{r setup, include=TRUE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(sf)
 library(maps)
+library(ggsci)
 library(patchwork)
 ```
 
 First, I'll read in the cluster analysis results from Part One.
 
-```{r read_kmeans_viz_data, include=TRUE, echo=FALSE, message=FALSE}
+```{r read_kmeans_viz_data, include=TRUE, message=FALSE}
 kmeans_viz_data <- read_csv('.//data/kmeans_viz_data.csv')
 ```
 
@@ -42,7 +43,7 @@ ggplot() +
 ```
 Create custom map themes.
 
-```{r map_themes, include=TRUE, echo=FALSE}
+```{r map_themes, include=TRUE}
 map.theme <- theme(text = element_text(family = "Arial", color = "black"), 
                    panel.background = element_rect(fill = "white"),
                    plot.background = element_rect(fill = "white"),
@@ -77,7 +78,7 @@ map.theme.small <- theme(text = element_text(family = "Arial", color = "black"),
 
 Recode some country names to make `sf::` and the cluster results compatible.
 
-```{r recode_cnty_names, include=TRUE, echo=FALSE}
+```{r recode_cnty_names, include=TRUE}
 map.world <- map_data("world") %>% 
   mutate(region = recode(region, 
                          "Central African Republic" = "Central AfR",
@@ -92,7 +93,7 @@ map.world <- map_data("world") %>%
 
 # Cluster maps
 
-```{r joined.world.map, include=TRUE, echo=FALSE}
+```{r joined.world.map, include=TRUE}
 joined.world.map <- left_join(x=map.world,
                              y=kmeans_viz_data,
                              by=c('region' = 'country'))
